tests/baselines/reference/parserErrorRecovery_SwitchStatement2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_SwitchStatement2.ts (2 errors) ====
    class C {
      constructor() {
        switch (e) {
                ~
!!! parserErrorRecovery_SwitchStatement2.ts(3,13): error TS2095: Cannot find name 'e'.
    
    class D {
    ~~~~~
!!! parserErrorRecovery_SwitchStatement2.ts(5,1): error TS1008: Unexpected token; 'case or default clause' expected.
    }